--- a/PyhubWeb/apps/article/templates/article/detail.html
+++ b/PyhubWeb/apps/article/templates/article/detail.html
@@ -1,18 +1,18 @@
-{% extends "qa/base.html" %}
+{% extends "article/base.html" %}
 
 {% block content %}
 
   <div class="row">
         <div class="col s12 m12">
-          <h2 class="header">{{ question.title| safe }}</h2>
+          <h2 class="header">{{ article.title| safe }}</h2>
           <div class="card">
             <div class="card-action">
               <div class="article-meta">
                 {# 文章标签 #}
                 <i class="material-icons">label</i>
-                {% for tag in question.tags %}
+                {% for tag in article.tags %}
                   <div class="chip">
-                    <a href="{% url 'qa:tag' tag %}">{{tag}}</a>
+                    <a href="{% url 'article:tag' tag %}">{{tag}}</a>
                   </div>
                 {% endfor %}
               </div>
@@ -20,33 +20,15 @@
 
             <div class="card-content">
                 <hr>
-                <p>{{ question.content | safe }}</p>
+                <p>{{ article.content | safe }}</p>
             </div>
 
             <div class="card-action">
-                来源：<a class="mdl-button" href="{{ question.url }}">{{ question.url }}</a>
+                来源：<a class="mdl-button" href="{{ article.source }}">{{ article.source }}</a>
             </div>
           </div>
           </div>
   </div>
 
-
-  <h3>共有{{ question.answer_count }}个答案</h3>
-    {% for answer in question.answers %}
-        <div class="col s12 m6 z-depth-2">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-                <p>{{ answer.answer_text | safe }}</p>
-            </div>
-            <div class="card-action">
-              {% if answer.is_accepted %}
-                  <p>该答案已被采纳</p>
-              {% endif %}
-              <p>赞成数量{{ answer.answer_votes }}</p>
-            </div>
-
-          </div>
-        </div>
-    {% endfor %}
 
 {% endblock %}
