--- a/PyhubWeb/apps/article/templates/article/index.html
+++ b/PyhubWeb/apps/article/templates/article/index.html
@@ -10,31 +10,31 @@
             <tr>
                 <th data-field="title">标题</th>
                 <th data-field="tag">标签</th>
-                <th data-field="count">状态</th>
+                <th data-field="count">发布时间</th>
             </tr>
         </thead>
         <tbody>
-            {% if questions %}
+            {% if articles %}
 
-            {% paginate questions 20 %}
-            {% for q in questions %}
+            {% paginate articles 20 %}
+            {% for a in articles %}
             <tr>
               <td>
-                  <a href="{% url 'article:detail' q|private:'_id' %}">{{q.title|safe}}</a>
-                  <a id="q_detail" class="right hide-on-med-and-down" href="#{{ q|private:'_id' }}"><i class="material-icons left">info_outline</i></a>
-                  <div id="{{ q|private:'_id' }}" class="modal">
+                  <a href="{% url 'article:detail' a|private:'id' %}">{{a.title|safe}}</a>
+                  <a id="q_detail" class="right hide-on-med-and-down" href="#{{ a|private:'id' }}"><i class="material-icons left">info_outline</i></a>
+                  <div id="{{ a|private:'id' }}" class="modal">
                     <div class="modal-content">
                       <h4>问题详情</h4>
-                      <p>{{ q.content|safe }}</p>
+                      <p>{{ a.content|safe }}</p>
                     </div>
                     <div class="modal-footer">
-                      <a href="{% url 'article:detail' q|private:'_id' %}">查看答案</a>
+                      <a href="{% url 'article:detail' a|private:'id' %}">查看答案</a>
                       <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
                     </div>
                   </div>
               </td>
               <td>
-              {% for tag in q.tags %}
+              {% for tag in a.tags %}
                   <div class="chip">
                     <a href="{% url 'article:tag' tag %}">{{tag}}</a>
                   </div>
@@ -42,14 +42,7 @@
               </td>
 
               <td>
-                  {% if  q.is_solved %}
-                    <a class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="已解决">已解决</a>
-                  {% else %}
-                    <a class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="未解决">未解决</a>
-                  {% endif %}
-                  <a class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="回答数量">{{q.answer_count}}</a>
-                  <a class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="查看数量">{{q.view_count}}</a>
-                  <a class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="赞同数量">{{q.vote_count}}</a>
+                  <a>{{a.pub_date}}</a>
               </td>
             </tr>
             {% endfor %}
