1. 修改seeting的allow_hosts，允许任意访问 2. 修改静态文件从七牛云加载

--- a/PyhubWeb/apps/article/templates/article/base.html
+++ b/PyhubWeb/apps/article/templates/article/base.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title></title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="{% static 'css/materialize.min.css' %}" rel="stylesheet">
+    <!--<link href="{% static 'css/materialize.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/materialize.min.js' %}"></script>
+    <script src="{% static 'js/materialize.min.js' %}"></script>-->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <script src="http://oceas72q5.bkt.clouddn.com/js/jquery-3.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
 
     <title>问答门</title>
