1. 修复lagou爬虫 2. web端添加job app 3. 分页方式改为pure_pagination

--- a/PyhubWeb/apps/article/templates/article/index.html
+++ b/PyhubWeb/apps/article/templates/article/index.html
@@ -14,10 +14,8 @@
             </tr>
         </thead>
         <tbody>
-            {% if articles %}
 
-            {% paginate articles 20 %}
-            {% for a in articles %}
+            {% for a in articles.object_list %}
             <tr>
               <td>
                   <a href="{% url 'article:detail' a|private:'id' %}">{{a.title|safe}}</a>
@@ -46,7 +44,6 @@
               </td>
             </tr>
             {% endfor %}
-            {% endif %}
         </tbody>
     </table>
 
