--- a/PyhubWeb/apps/qa/templates/qa/base.html
+++ b/PyhubWeb/apps/qa/templates/qa/base.html
@@ -21,7 +21,7 @@
     <nav>
         <div class="nav-wrapper container col s8 m8 l8">
           <ul class="hide-on-med-and-down">
-            <li><a href="{% url 'qa:index' %}">问答门</a></li>
+            <li><a href="/">PY集中营</a></li>
           </ul>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li>
@@ -36,7 +36,7 @@
               </li>
               <li><a href="/qa">问答</a></li>
               <li><a href="/article">专栏</a></li>
-              <li><a href="/">求职</a></li>
+              <li><a href="/job">求职</a></li>
           </ul>
         </div>
     </nav>
@@ -62,12 +62,12 @@
         $(".button-collapse").sideNav();
       });
 
-      <!--$(function() {
-          $('#search').bind('input propertychange', function () {
-              var $key = $("#search").val();
-              $("#search_form").attr("action",'/search/'+$key+'/');
-          })
-      });-->
+//      $(function() {
+//          $('#search').bind('input propertychange', function () {
+//              var $key = $("#search").val();
+//              $("#search_form").attr("action",'/search/'+$key+'/');
+//          })
+//      });
     </script>
 
 </body>
